--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -9,6 +9,20 @@ section.about{
     color: $darkColor;
     margin-top: 0;
   }
+  .eventLine p {
+    text-align: center;
+  }
+  h3 {
+    font-family: 'Hamburg Hand Light';
+    color: $darkColor;
+    letter-spacing: 1px;
+    text-align: left;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 1.3;
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
   .resume {
     justify-content: left;
     a {
