--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,6 +1,7 @@
 section.contact {
   height: auto;
-  background-color: $mediumColor;
+  // background-color: $mediumColor;
+  background-color: $lightColor;
   display: flex;
   flex-direction: column;
   p.working {
@@ -107,6 +108,7 @@ section.contact {
     flex-direction: column;
     align-items: center;
     color: $darkColor;
+    margin-bottom: 100px;
     a[href^="mailto"] {
       color: inherit;
       text-decoration: underline;
