--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,8 +19,8 @@
 @import 'header';
 @import 'nav';
 @import 'about';
-@import 'skills';
-@import 'projects';
+@import 'events';
+@import 'work';
 @import 'contact';
 @import 'footer';
 @import 'media'
