--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -58,6 +58,24 @@
       }
       img {
         padding-bottom: 30px;
+        width: 310px;
+
+      }
+      .resume a {
+        margin: 0 auto;
+      }
+    }
+    h3 {
+      text-align: center;
+    }
+  } 
+  section.work {
+    .aboutParent {
+      flex-direction: column;
+      align-items: center;
+      img {
+        padding-bottom: 30px;
+        width: 310px;
       }
       .resume a {
         margin: 0 auto;
@@ -67,7 +85,18 @@
       text-align: center;
     }
   }
+  section.work .aboutParent div:nth-child(1) {
+    padding-left: 0px;
+    }
+    #work > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) {
+    padding-left: 0px;
+    }
+    section.work .aboutParent div:nth-child(1) {
+     width: auto;
+    }
 }
+
+
 
 @media(max-width: 860px) {
   h1 {
@@ -84,7 +113,8 @@
     font-size: 28px;
     letter-spacing: 3px;
   }
-  section.about {
+  section.about,
+  section.work {
     padding-bottom: 75px;
     .bodyLine {
       margin-bottom: 75px;
@@ -150,10 +180,11 @@
   nav ul li {
     border-bottom: 1px solid $lightColor;
   }
-  section.about {
+  section.about,
+  section.work {
     .aboutParent {
       div:nth-child(1) {
-        width: 100%;
+        width: auto;
       }
     }
   }
@@ -209,7 +240,8 @@
   .topBar {
     height: 43px;
   }
-  section.about {
+  section.about,
+  section.work {
     .picture {
       img {
         width: 100%;
