--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,7 +1,6 @@
 section.contact {
   height: auto;
-  // background-color: $mediumColor;
-  background-color: $lightColor;
+  background-color: #E2F3E9;
   display: flex;
   flex-direction: column;
   p.working {
