--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
-$accentColor: #b3331a;
-$darkColor: #444349;
+$accentColor: #49AB74;
+$darkColor: #59585F;
 $lightColor: #EFEFF0;
 $mediumColor: #DCEBEA;
