--- a/sass/main.css
+++ b/sass/main.css
@@ -265,13 +265,13 @@ html {
 }
 
 html {
-  background-color: #444349;
+  background-color: #59585F;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #444349;
+  color: #59585F;
 }
 
 img {
@@ -290,7 +290,7 @@ ul {
 }
 
 h2 {
-  color: #444349;
+  color: #59585F;
   text-align: center;
   font-family: 'Hamburg Hand Regular';
   font-size: 30px;
@@ -304,20 +304,20 @@ h2 {
 p,
 .phone {
   font-family: 'Source Sans Pro';
-  color: #444349;
+  color: #59585F;
   font-size: 19px;
   line-height: 1.5;
 }
 
 .bodyLine {
-  border-top: 2px solid #b3331a;
+  border-top: 2px solid #49AB74;
   width: 70px;
   border-radius: 20px;
   margin: 0 auto;
 }
 
 header {
-  background-image: url(../assets/stardust_@2X.png);
+  background-image: url(../assets/more-leaves-on-green.png);
   background-attachment: fixed;
   height: 100vh;
   display: -webkit-box;
@@ -352,7 +352,7 @@ h1 {
 
 h1,
 h2.header {
-  color: #EFEFF0;
+  color: #59585F;
   padding: 0;
   text-align: center;
 }
@@ -410,7 +410,7 @@ nav ul li a:active::after {
   width: calc(100% - 8px);
   display: block;
   height: 2px;
-  background-color: #b3331a;
+  background-color: #49AB74;
   position: absolute;
   bottom: 2px;
 }
@@ -423,7 +423,7 @@ header ul.top {
   display: -ms-flexbox;
   display: flex;
   position: fixed;
-  background-color: #444349;
+  background-color: #59585F;
   width: 100vw;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -434,14 +434,14 @@ header ul.top {
 
 header ul.bottom {
   width: 100vw;
-  background-color: #444349;
+  background-color: #59585F;
   position: fixed;
   z-index: 1000;
   list-style: none;
 }
 
 header i.fas {
-  color: #b3331a;
+  color: #49AB74;
   font-size: 55px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -547,7 +547,7 @@ header i.fas {
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-  background-color: #b3331a;
+  background-color: #49AB74;
 }
 
 .hamburger-box {
@@ -555,7 +555,7 @@ header i.fas {
   height: 42px;
   display: inline-block;
   position: fixed;
-  background-color: #444349;
+  background-color: #59585F;
   width: 100%;
   top: 0;
   left: 0;
@@ -584,7 +584,7 @@ header i.fas {
 .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
   width: 30px;
   height: 2px;
-  background-color: #b3331a;
+  background-color: #49AB74;
   border-radius: 20px;
   position: absolute;
   -webkit-transition-property: -webkit-transform;
@@ -673,7 +673,7 @@ section.about .bodyLine {
 }
 
 section.about p {
-  color: #444349;
+  color: #59585F;
   margin-top: 0;
 }
 
@@ -683,7 +683,7 @@ section.about .eventLine p {
 
 section.about h3 {
   font-family: 'Source Sans Pro';
-  color: #444349;
+  color: #59585F;
   font-size: 23px;
   margin-top: 0px;
 }
@@ -695,9 +695,9 @@ section.about .resume {
 }
 
 section.about .resume a {
-  color: #b3331a;
+  color: #49AB74;
   font-family: 'Hamburg Hand Light';
-  border-bottom: 1px solid #b3331a;
+  border-bottom: 1px solid #49AB74;
   width: 205px;
   padding-bottom: 1px;
   letter-spacing: 1px;
@@ -718,7 +718,7 @@ section.about .aboutParent {
 }
 
 section.about .aboutParent div:nth-child(1) {
-  width: 65%;
+  width: 50%;
   padding-right: 20px;
 }
 
@@ -737,14 +737,14 @@ section.events .bodyLine {
 }
 
 section.events p {
-  color: #444349;
+  color: #59585F;
   margin-top: 0;
   text-align: center;
 }
 
 section.work {
   height: auto;
-  background-color: #EFEFF0;
+  background-color: #E2F3E9;
   padding-bottom: 50px;
 }
 
@@ -752,46 +752,30 @@ section.work .bodyLine {
   margin-bottom: 100px;
 }
 
-section.work p {
-  color: #444349;
-  margin-top: 0;
+section.work .poem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-section.work .eventLine p {
-  text-align: center;
+section.work p {
+  color: #59585F;
+  margin-top: 0;
 }
 
 section.work h3 {
   font-family: 'Source Sans Pro';
-  color: #444349;
+  color: #59585F;
   font-size: 23px;
   margin-top: 0px;
 }
 
-section.work .aboutParent {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-section.work .aboutParent div:nth-child(1) {
-  width: 50%;
-  padding-left: 20px;
-}
-
-section.work .picture img {
-  width: 450px;
-}
-
-#work > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) {
-  padding-left: 40px;
-}
-
 section.contact {
   height: auto;
-  background-color: #EFEFF0;
+  background-color: #E2F3E9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -830,10 +814,10 @@ section.contact textarea {
   border-radius: 0px;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #444349;
+  border-bottom: 1px solid #59585F;
   font-family: 'Source Sans Pro';
   font-size: 18px;
-  color: #444349;
+  color: #59585F;
   border-radius: 0px;
   background-color: transparent;
   -webkit-box-shadow: 0 2px 0 0 transparent;
@@ -841,42 +825,42 @@ section.contact textarea {
 }
 
 section.contact textarea::-webkit-input-placeholder {
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
 
 section.contact textarea:-ms-input-placeholder {
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
 
 section.contact textarea::-ms-input-placeholder {
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
 
 section.contact textarea::placeholder {
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
 
 section.contact textarea:focus {
-  border-bottom: 1px solid #b3331a;
-  -webkit-box-shadow: 0 2px 0 0 #b3331a;
-          box-shadow: 0 2px 0 0 #b3331a;
+  border-bottom: 1px solid #49AB74;
+  -webkit-box-shadow: 0 2px 0 0 #49AB74;
+          box-shadow: 0 2px 0 0 #49AB74;
 }
 
 section.contact textarea:focus:focus + label {
-  color: #b3331a;
+  color: #49AB74;
 }
 
 section.contact .submit {
   margin: 50px auto 50px auto;
-  background-color: #b3331a;
+  background-color: #49AB74;
   padding: 13px 40px;
   border-radius: 20px;
   font-family: 'Hamburg Hand Light';
@@ -892,13 +876,13 @@ section.contact .submit {
 }
 
 section.contact .submit:hover, section.contact .submit:focus {
-  background-color: #444349;
+  background-color: #59585F;
 }
 
 section.contact .half input[type="text"],
 section.contact .half input[type="email"] {
   border: none;
-  border-bottom: 1px solid #444349;
+  border-bottom: 1px solid #59585F;
   -webkit-box-shadow: 0 2px 0 0 transparent;
           box-shadow: 0 2px 0 0 transparent;
   width: 100%;
@@ -906,7 +890,7 @@ section.contact .half input[type="email"] {
   font-family: 'Source Sans Pro';
   font-size: 18px;
   padding-bottom: 5px;
-  color: #444349;
+  color: #59585F;
   -webkit-appearance: none;
   border-radius: 0px;
   background-color: transparent;
@@ -914,14 +898,14 @@ section.contact .half input[type="email"] {
 
 section.contact .half input[type="text"]:focus,
 section.contact .half input[type="email"]:focus {
-  border-bottom: 1px solid #b3331a;
-  -webkit-box-shadow: 0 2px 0 0 #b3331a;
-          box-shadow: 0 2px 0 0 #b3331a;
+  border-bottom: 1px solid #49AB74;
+  -webkit-box-shadow: 0 2px 0 0 #49AB74;
+          box-shadow: 0 2px 0 0 #49AB74;
 }
 
 section.contact .half input[type="text"]:focus:focus + label,
 section.contact .half input[type="email"]:focus:focus + label {
-  color: #b3331a;
+  color: #49AB74;
 }
 
 section.contact .formParent .half {
@@ -932,7 +916,7 @@ section.contact .formParent .half {
 section.contact input::-webkit-input-placeholder {
   font-size: 18px;
   line-height: 24px;
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
@@ -940,7 +924,7 @@ section.contact input::-webkit-input-placeholder {
 section.contact input:-ms-input-placeholder {
   font-size: 18px;
   line-height: 24px;
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
@@ -948,7 +932,7 @@ section.contact input:-ms-input-placeholder {
 section.contact input::-ms-input-placeholder {
   font-size: 18px;
   line-height: 24px;
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
@@ -956,7 +940,7 @@ section.contact input::-ms-input-placeholder {
 section.contact input::placeholder {
   font-size: 18px;
   line-height: 24px;
-  color: #444349;
+  color: #59585F;
   padding: 0;
   margin: 0;
 }
@@ -981,12 +965,12 @@ section.contact .phone {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #444349;
+  color: #59585F;
   margin-bottom: 50px;
 }
 
 footer {
-  background-color: #444349;
+  background-color: #59585F;
   width: 100%;
 }
 
@@ -1077,34 +1061,6 @@ footer p {
   section.about h3 {
     text-align: center;
   }
-  section.work .aboutParent {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  section.work .aboutParent img {
-    padding-bottom: 30px;
-    width: 310px;
-  }
-  section.work .aboutParent .resume a {
-    margin: 0 auto;
-  }
-  section.work h3 {
-    text-align: center;
-  }
-  section.work .aboutParent div:nth-child(1) {
-    padding-left: 0px;
-  }
-  #work > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) {
-    padding-left: 0px;
-  }
-  section.work .aboutParent div:nth-child(1) {
-    width: auto;
-  }
 }
 
 @media (max-width: 860px) {
@@ -1191,13 +1147,12 @@ footer p {
     display: none;
   }
   nav ul li a.active {
-    color: #b3331a;
+    color: #49AB74;
   }
   nav ul li {
     border-bottom: 1px solid #EFEFF0;
   }
-  section.about .aboutParent div:nth-child(1),
-  section.work .aboutParent div:nth-child(1) {
+  section.about .aboutParent div:nth-child(1) {
     width: auto;
   }
   section.contact form {
@@ -1252,8 +1207,7 @@ footer p {
   .topBar {
     height: 43px;
   }
-  section.about .picture img,
-  section.work .picture img {
+  section.about .picture img {
     width: 100%;
     height: auto;
   }
