--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,16 +1,17 @@
 section.work{
   height: auto;
-  background-color: $lightColor;
+  background-color: #E2F3E9;
   padding-bottom: 50px;
   .bodyLine {
     margin-bottom: 100px;
   }
+  .poem {
+    display: flex;
+    justify-content: center;
+  }
   p {
     color: $darkColor;
     margin-top: 0;
-  }
-  .eventLine p {
-    text-align: center;
   }
   h3 {
     font-family: 'Source Sans Pro';
@@ -18,24 +19,9 @@ section.work{
     font-size: 23px;
     margin-top: 0px;
   }
-  .aboutParent {
-    display: flex;
-    justify-content: space-around;
-    div:nth-child(1) {
-      width: 50%;
-      padding-left: 20px;
-    }
-  }
-  .picture {
-    img{
-      width: 450px;
-    }
-  }
 }
 
-#work > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) {
-  padding-left: 40px;
-  }
+
 
 
 
