--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -7,7 +7,8 @@ section.work{
   }
   .poem {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
   p {
     color: $darkColor;
@@ -18,6 +19,35 @@ section.work{
     color: $darkColor;
     font-size: 23px;
     margin-top: 0px;
+  }
+  h4 {
+    font-family: 'Source Sans Pro';
+    color: $darkColor;
+    font-size: 19px;
+    margin-top: 0px;
+    font-weight: normal;
+  }
+  .buy {
+    padding-top: 60px;
+  }
+  .title {
+    font-style: italic;
+  }
+  a {
+    color: $accentColor;
+    font-family: 'Hamburg Hand Light';
+    border-bottom: 1px solid $accentColor;
+    width: 100px;
+    padding-bottom: 0px;
+    letter-spacing: 1px;
+    padding-top: 0px;
+    margin: 0 auto;
+    text-align: center;
+    &:hover,
+    &:focus {
+      border-bottom: 1px solid transparent;
+      color: #EE6C4D;
+    }
   }
 }
 
