--- a/sass/main.css
+++ b/sass/main.css
@@ -756,9 +756,13 @@ section.work .poem {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 section.work p {
@@ -771,6 +775,39 @@ section.work h3 {
   color: #59585F;
   font-size: 23px;
   margin-top: 0px;
+}
+
+section.work h4 {
+  font-family: 'Source Sans Pro';
+  color: #59585F;
+  font-size: 19px;
+  margin-top: 0px;
+  font-weight: normal;
+}
+
+section.work .buy {
+  padding-top: 60px;
+}
+
+section.work .title {
+  font-style: italic;
+}
+
+section.work a {
+  color: #49AB74;
+  font-family: 'Hamburg Hand Light';
+  border-bottom: 1px solid #49AB74;
+  width: 100px;
+  padding-bottom: 0px;
+  letter-spacing: 1px;
+  padding-top: 0px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+section.work a:hover, section.work a:focus {
+  border-bottom: 1px solid transparent;
+  color: #EE6C4D;
 }
 
 section.contact {
