fixed spacing at beginnings and ends of sections

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -30,8 +30,7 @@ h2 {
   padding-bottom: 30px;
   font-weight: 400;
 }
-p,
-.phone {
+p {
   font-family: 'Source Sans Pro';
   color: $darkColor;
   font-size: 19px;
