--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,36 +1,10 @@
-@media(max-width: 1260px) {
-  section.projects {
-    img {
-      width: 500px;
-    }
-    .projectParent p {
-      width: 500px;
-    } 
-  }
-}
 @media(max-width: 1160px) {
-  section.projects img,
-  section.projects .projectParent p {
-    width: 400px;
-  }
   section.contact form {
     width: 90%;
   }
 }
 
 @media(max-width: 975px) {
-  section.projects {
-    .projectParent {
-      flex-direction: column;
-      img {
-        width: 500px;
-        padding-bottom: 30px;
-      }
-    }
-    .projectParent.middle {
-      flex-direction: column-reverse;
-    }
-  }
   .formParent {
     flex-direction: column;
   }
@@ -41,9 +15,6 @@
     width: 70%;
   }
   section.contact {
-    p.working {
-      padding-bottom: 0;
-    }
     form {
       padding-top: 0;
     }
@@ -59,10 +30,6 @@
       img {
         padding-bottom: 30px;
         width: 310px;
-
-      }
-      .resume a {
-        margin: 0 auto;
       }
     }
     h3 {
@@ -70,8 +37,6 @@
     }
   } 
 }
-
-
 
 @media(max-width: 860px) {
   h1 {
@@ -88,30 +53,20 @@
     font-size: 28px;
     letter-spacing: 3px;
   }
+  section.contact .buttonParent {
+    margin-bottom: 30px;
+  }
   section.about,
   section.work {
-    padding-bottom: 75px;
     .bodyLine {
       margin-bottom: 75px;
     }
   }
-  section.skills {
-    padding-bottom: 25px;
-    .bodyLine {
-      margin-bottom: 68px;
-    }
+  section.about {
+    padding-bottom: 57px;
   }
-  section.projects .projectParent {
-    margin-top: 75px;
-    padding-bottom: 75px;
-  }
-  section.contact {
-    .social {
-      margin-bottom: 75px;
-    }
-  }
-  section.contact p.working {
-    padding-top: 75px;
+  section.work {
+    padding-bottom: 80px;
   }
   section.contact .formParent {
     margin-top: 15px;
@@ -180,15 +135,8 @@
     font-size: 27px;
     letter-spacing: 2px;
   }
-  section.projects .projectParent img,
-  div.projectParent:nth-child(3) > div:nth-child(2) {
-    width: 400px;
-  }
   section.contact form {
     width: 90%;
-  }
-  section.projects .projectParent h3 {
-    font-size: 20px;
   }
 }
 
@@ -222,27 +170,6 @@
       }
     }
   }
-  section.skills {
-    padding-bottom: 35px;
-  }
-  section.projects {
-    padding-right: 20px;
-    padding-left: 20px;
-    .projectParent img,
-    .projectParent p {
-      width: 330px;
-    }
-    .link a {
-      margin: 10px 10px 0 10px;
-      padding: 11px 0;
-      font-size: 14px;
-      width: 154px;
-    }
-  }
-  
-  div.projectParent:nth-child(3) > div:nth-child(2){
-    width: 340px;
-  }
   section.contact form {
     width: 100%;
   }
@@ -255,12 +182,6 @@
   h2.header {
     font-size: 19px;
   }
-  section.projects .projectParent {
-    h3 {
-      letter-spacing: 1px;
-      font-size: 20px;
-    }
-  }
 }
 
 @media (max-width: 375px) {
@@ -269,21 +190,6 @@
   }
   header i.fas {
     font-size: 50px;
-  }
-  section.projects .projectParent {
-    img,
-    p {
-      width: 270px;
-    }
-  }
-  div.projectParent:nth-child(3) > div:nth-child(2) {
-    width: 294px;
-  }
-  section.projects .link a {
-    width: 125px;
-  }
-  section.skills {
-    padding-bottom: 45px;
   }
 }
 
@@ -303,4 +209,3 @@
     font-size: 24px;
   }
 }
-
