--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -5,11 +5,8 @@ section.work{
   .bodyLine {
     margin-bottom: 100px;
   }
-  h3 {
-    font-family: 'Source Sans Pro';
-    color: $darkColor;
-    font-size: 23px;
-    margin-top: 0px;
+  p {
+    text-align: center;
   }
   .poem {
     display: flex;
@@ -19,25 +16,32 @@ section.work{
   .title {
     font-style: italic;
   }
+  a {
+    color: $accentColor;
+    font-family: 'Hamburg Hand Light';
+    border-bottom: 1px solid $accentColor;
+    padding-bottom: 0px;
+    letter-spacing: 1px;
+    margin: 0 auto;
+      &:hover,
+      &:focus {
+        border-bottom: 1px solid transparent;
+        color: #EE6C4D;
+      }
+  }
+  .link {
+    width: max-content;
+    margin: 0 auto;
+    padding-top: 20px;
+  }
   .buy {
     padding-top: 60px;
     text-align: center;
     p {
       margin-top: 0;
     }
-  }
-  a {
-    color: $accentColor;
-    font-family: 'Hamburg Hand Light';
-    border-bottom: 1px solid $accentColor;
-    width: 100px;
-    padding-bottom: 0px;
-    letter-spacing: 1px;
-    margin: 0 auto;
-    &:hover,
-    &:focus {
-      border-bottom: 1px solid transparent;
-      color: #EE6C4D;
+    a {
+      width: 100px;
     }
   }
 }
