--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -32,10 +32,10 @@ section.work{
   .link {
     width: max-content;
     margin: 0 auto;
-    padding-top: 20px;
+    padding-bottom: 20px;
   }
   .buy {
-    padding-top: 60px;
+    padding-top: 40px;
     text-align: center;
     p {
       margin-top: 0;
