--- a/sass/main.css
+++ b/sass/main.css
@@ -757,11 +757,11 @@ section.work .link {
   width: -moz-max-content;
   width: max-content;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 section.work .buy {
-  padding-top: 60px;
+  padding-top: 40px;
   text-align: center;
 }
 
