--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -12,6 +12,7 @@ section.about{
   .aboutParent {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     div:nth-child(1) {
       width: 50%;
       padding-right: 20px;
