--- a/sass/main.css
+++ b/sass/main.css
@@ -682,6 +682,9 @@ section.about .aboutParent {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 section.about .aboutParent div:nth-child(1) {
@@ -1014,7 +1017,7 @@ footer p {
     line-height: 1;
   }
   header i.fas {
-    margin-bottom: 90px;
+    margin-bottom: 150px;
   }
   .headerParent > div:nth-child(3) {
     margin-top: 55px;
