--- a/sass/main.css
+++ b/sass/main.css
@@ -724,17 +724,8 @@ section.work p {
   text-align: center;
 }
 
-section.work .poem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+section.work p.heading {
+  font-weight: bold;
 }
 
 section.work .title {
