--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -117,6 +117,11 @@
       }
     }
   }
+  section.work {
+    .buy {
+      width: 100%;
+    }
+  }
   section.contact form {
     width: 90%;
   }
