--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -35,6 +35,8 @@ section.work{
   .buy {
     padding-top: 40px;
     text-align: center;
+    width: 75%;
+    margin: auto;
     p {
       margin-top: 0;
     }
