--- a/sass/main.css
+++ b/sass/main.css
@@ -757,6 +757,8 @@ section.work .link {
 section.work .buy {
   padding-top: 40px;
   text-align: center;
+  width: 75%;
+  margin: auto;
 }
 
 section.work .buy p {
@@ -1083,6 +1085,9 @@ footer p {
   }
   section.about .aboutParent div:nth-child(1) {
     width: auto;
+  }
+  section.work .buy {
+    width: 100%;
   }
   section.contact form {
     width: 90%;
