--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -57,7 +57,8 @@
     margin-bottom: 30px;
   }
   section.about,
-  section.work {
+  section.work,
+  section.events {
     .bodyLine {
       margin-bottom: 75px;
     }
@@ -65,7 +66,8 @@
   section.about {
     padding-bottom: 57px;
   }
-  section.work {
+  section.work,
+  section.events {
     padding-bottom: 80px;
   }
   section.contact .formParent {
